k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
spec:  
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
