k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-app-ingress
spec:
  rules:
    - host: DOMAIN_NAME
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nextjs-app
              port:
                number: 3000
